NXP-31279: cleanup / format